saving figures into week 3 dir

--- a/scripts/lap_prediction.ipynb
+++ b/scripts/lap_prediction.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "fe8d87e4-1b76-4cfc-bace-c3e277031803",
+       "ref": "c630af80-6901-4560-9d7f-fe92aee0cca0",
        "rows": [
         [
          "0",
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "afdbe458-6906-49bc-90c8-acb9f4eed725",
+       "ref": "c5806215-db31-49e7-b082-ef0c4c7e129a",
        "rows": [
         [
          "0",
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "6033b5e7-2af4-480f-97bd-62a5de915764",
+       "ref": "6aa30039-570f-4bf1-9247-b9c6b47051bd",
        "rows": [
         [
          "25",
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "c3868981-2097-4786-82ee-82f42f911887",
+       "ref": "a13324ed-afa9-48c9-9d86-fe3d3f30b53d",
        "rows": [
         [
          "0",
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2216,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -2502,7 +2502,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b3c07d7c-3433-45b5-9a67-c61ceb8dfe61",
+       "ref": "9fbfcf41-5d74-44c7-a2c8-a02240e7b653",
        "rows": [
         [
          "0",
@@ -3059,7 +3059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3117,7 +3117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -3147,7 +3147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -3187,7 +3187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -3229,7 +3229,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "81459790-4d4d-4b5d-bfd9-af6baa612603",
+       "ref": "b7d2e92e-f995-46c6-93fe-bc3f745880a5",
        "rows": [
         [
          "0",
@@ -3365,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3402,7 +3402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -3430,7 +3430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -3497,7 +3497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -3554,7 +3554,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f19b7d2b-0eec-45cf-82f5-f00cec27cebf",
+       "ref": "7c75b0b4-bc01-4964-a071-da8c9f096f0d",
        "rows": [
         [
          "0",
@@ -3723,7 +3723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3765,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -3791,7 +3791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -3814,6 +3814,7 @@
     "    plt.xlabel('DRS Usado (0=No, 1=Sí)')\n",
     "    plt.ylabel('Tiempo por Vuelta (s)')\n",
     "    plt.grid(True, alpha=0.3)\n",
+    "    plt.savefig('../outputs/week3/drs_impact.png')\n",
     "    plt.show()"
    ]
   },
@@ -3850,7 +3851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -3897,6 +3898,7 @@
     "plt.ylim(q1 * 0.95, q3 * 1.05)\n",
     "\n",
     "plt.tight_layout()\n",
+    "plt.savefig('../outputs/week3/lap_times.png')\n",
     "plt.show()"
    ]
   },
@@ -3942,7 +3944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3984,7 +3986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -4009,7 +4011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -4031,6 +4033,7 @@
     "    plt.title('Tiempos por Vuelta Antes de una Parada')\n",
     "    plt.xlabel('Parada en Siguiente Vuelta (0=No, 1=Sí)')\n",
     "    plt.ylabel('Tiempo por Vuelta (s)')\n",
+    "    plt.savefig('../outputs/week3/before_after_pit_times.png')\n",
     "    plt.grid(True, alpha=0.3)\n",
     "    plt.show()"
    ]
@@ -4048,7 +4051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -4115,7 +4118,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a01227b5-f0b0-40a5-89b3-c9e967831554",
+       "ref": "96a71350-21cb-4fa4-8199-9100a1cdd76c",
        "rows": [
         [
          "0",
@@ -4291,6 +4294,7 @@
     "    plt.title('Evolución del Tiempo por Vuelta Después de una Parada')\n",
     "    plt.xlabel('Vueltas Desde Última Parada')\n",
     "    plt.ylabel('Tiempo por Vuelta Promedio (s)')\n",
+    "    plt.savefig('../outputs/week3/after_pit_time_evo.png')\n",
     "    plt.grid(True, alpha=0.3)\n",
     "    plt.show()\n",
     "\n",
@@ -4321,7 +4325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4380,7 +4384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -4430,7 +4434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -4452,6 +4456,7 @@
     "    plt.xlabel('Característica')\n",
     "    plt.ylabel('Número de Valores Faltantes')\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig('../outputs/week3/missing_values.png')\n",
     "    plt.show()"
    ]
   },
@@ -4469,7 +4474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4501,7 +4506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
@@ -4521,7 +4526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -4569,7 +4574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4602,7 +4607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -4623,7 +4628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4648,7 +4653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -4669,7 +4674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4701,7 +4706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -4720,7 +4725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4756,7 +4761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -4789,7 +4794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4836,7 +4841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -4896,7 +4901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -4968,7 +4973,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "9c4324cb-85eb-4944-991a-061ae10bc0b9",
+       "ref": "f1bb1f28-425d-4ab9-ba0c-b0661e528e8e",
        "rows": [
         [
          "count",
@@ -5276,7 +5281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5313,7 +5318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
