added compound names for better labels

--- a/scripts/lap_prediction.ipynb
+++ b/scripts/lap_prediction.ipynb
@@ -3736,16 +3736,24 @@
     "    3: 'gray',    # HARD\n",
     "    4: 'green',   # INTERMEDIATE\n",
     "    5: 'blue'     # WET\n",
+    "}\n",
+    "\n",
+    "# Compound names for better labels in the legend\n",
+    "compound_names = {\n",
+    "    1: 'SOFT', \n",
+    "    2: 'MEDIUM', \n",
+    "    3: 'HARD', \n",
+    "    4: 'INTERMEDIATE', \n",
+    "    5: 'WET'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Visualizar la relación entre edad de neumáticos y tiempo por vuelta\n",
     "if 'TyreAge' in cleaned_tyre_features_data.columns and 'Compound' in cleaned_tyre_features_data.columns:\n",
     "    plt.figure(figsize=(12, 6))\n",
