downloaded belgium gp video

--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -365,8 +365,10 @@
     "\n",
     "# Ejecutar con tu video\n",
     "def main():\n",
-    "    video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
+    "    #video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
     "    #video_path = \"../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\"\n",
+    "    \n",
+    "    video_path = \"../f1-strategy/data/videos/belgium_gp.f399.mp4\"\n",
     "    output_path = \"../f1-strategy/data/videos/gap_detection_output.mp4\"\n",
     "    process_video_with_yolo(video_path, output_path)\n",
     "\n",
