--- a/scripts/YOLO_fine_tune.ipynb
+++ b/scripts/YOLO_fine_tune.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11488,7 +11488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11497,14 +11497,14 @@
      "text": [
       "\n",
       "=== ESTADÍSTICAS DE DETECCIÓN ===\n",
-      "Williams: 345 detecciones (43.4%)\n",
-      "Red Bull: 179 detecciones (22.5%)\n",
-      "Aston Martin: 78 detecciones (9.8%)\n",
-      "Alpine: 62 detecciones (7.8%)\n",
-      "Mercedes: 60 detecciones (7.5%)\n",
-      "Haas: 58 detecciones (7.3%)\n",
-      "Racing Bulls: 10 detecciones (1.3%)\n",
-      "Kick Sauber: 3 detecciones (0.4%)\n",
+      "Williams: 3886 detecciones (58.3%)\n",
+      "Alpine: 1030 detecciones (15.5%)\n",
+      "Red Bull: 963 detecciones (14.5%)\n",
+      "Haas: 469 detecciones (7.0%)\n",
+      "Mercedes: 165 detecciones (2.5%)\n",
+      "Aston Martin: 84 detecciones (1.3%)\n",
+      "Kick Sauber: 62 detecciones (0.9%)\n",
+      "Racing Bulls: 1 detecciones (0.0%)\n",
       "===============================\n"
      ]
     }
@@ -11905,8 +11905,8 @@
     "# Ejemplo de uso\n",
     "if __name__ == \"__main__\":\n",
     "    # Ruta a tu video\n",
-    "    video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
-    "    output_path = \"../f1-strategy/data/videos/detection_optimized.mp4\"\n",
+    "    video_path = \"../f1-strategy/data/videos/belgium_gp.f399.mp4\"\n",
+    "    output_path = \"../f1-strategy/data/videos/detection_optimized_belgium.mp4\"\n",
     "\n",
     "    # Procesar video\n",
     "    process_video(video_path, output_path, show=True)"
