updated open cv fine tune detection

--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -375,6 +375,25 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Controls\n",
+    "\n",
+    "'q': out\n",
+    "'+': more detection threshold\n",
+    "'-': less detection threshold\n",
+    "'d': 10 seconds ahead "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
