added option for going forward 10 secs

--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -19,9 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipped forward 10 seconds to frame 570\n",
+      "Skipped forward 10 seconds to frame 1124\n",
+      "Skipped forward 10 seconds to frame 1655\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -117,6 +127,8 @@
     "    original_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
     "    original_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    current_frame = 0\n",
     "    \n",
     "    # Calcular nuevo alto manteniendo la relación de aspecto\n",
     "    target_height = int(FRAME_WIDTH * original_height / original_width)\n",
@@ -137,6 +149,7 @@
     "            break\n",
     "        \n",
     "        frame_count += 1\n",
+    "        current_frame += 1\n",
     "        \n",
     "        # Redimensionar manteniendo la relación de aspecto\n",
     "        frame_resized = cv2.resize(frame, (FRAME_WIDTH, target_height))\n",
@@ -334,9 +347,14 @@
     "        cv2.putText(frame_resized, \"F1 Gap Detection\", (FRAME_WIDTH - 300, 40),\n",
     "                   cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 2)\n",
     "        \n",
-    "        # Mostrar modo de detección\n",
+    "        # Mostrar modo de detección y progreso\n",
     "        detection_mode = f\"Detection Threshold: {GAP_DETECTION_THRESHOLD:.2f}\"\n",
     "        cv2.putText(frame_resized, detection_mode, (20, target_height - 30),\n",
+    "                   cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
+    "        \n",
+    "        # Mostrar progreso del video\n",
+    "        progress_text = f\"Frame: {current_frame}/{total_frames} ({current_frame/total_frames*100:.1f}%)\"\n",
+    "        cv2.putText(frame_resized, progress_text, (FRAME_WIDTH - 400, target_height - 30),\n",
     "                   cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
     "        \n",
     "        # Guardar frame procesado si se solicitó\n",
@@ -354,9 +372,15 @@
     "        elif key == ord('-'):  # Disminuir umbral\n",
     "            GAP_DETECTION_THRESHOLD = max(GAP_DETECTION_THRESHOLD - 0.05, 0.05)\n",
     "            print(f\"Detection threshold decreased to {GAP_DETECTION_THRESHOLD:.2f}\")\n",
-    "    # Salir si se presiona 'q'\n",
-    "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "                break\n",
+    "        elif key == ord('d'):  # Avanzar 10 segundos\n",
+    "            skip_frames = int(fps * 10)  # 10 segundos * fps = número de frames a saltar\n",
+    "            new_frame_pos = min(current_frame + skip_frames, total_frames - 1)\n",
+    "            cap.set(cv2.CAP_PROP_POS_FRAMES, new_frame_pos)\n",
+    "            current_frame = new_frame_pos - 1  # Se incrementará en el próximo ciclo\n",
+    "            # Reiniciar tracking temporalmente\n",
+    "            last_detections = {}\n",
+    "            print(f\"Skipped forward 10 seconds to frame {new_frame_pos}\")\n",
+    "    \n",
     "    # Liberar recursos\n",
     "    cap.release()\n",
     "    if output_path:\n",
