--- a/scripts/YOLO_fine_tune.ipynb
+++ b/scripts/YOLO_fine_tune.ipynb
@@ -11488,19 +11488,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Skipped forward 10 seconds to frame 539\n",
+      "Skipped forward 10 seconds to frame 1050\n",
+      "Skipped forward 10 seconds to frame 1611\n",
       "\n",
       "=== ESTADÍSTICAS DE DETECCIÓN ===\n",
-      "Haas: 446 detecciones (89.7%)\n",
-      "Aston Martin: 26 detecciones (5.2%)\n",
-      "Red Bull: 24 detecciones (4.8%)\n",
-      "Kick Sauber: 1 detecciones (0.2%)\n",
+      "Haas: 136 detecciones (84.0%)\n",
+      "Red Bull: 23 detecciones (14.2%)\n",
+      "Mercedes: 3 detecciones (1.9%)\n",
       "===============================\n"
      ]
     }
@@ -11941,6 +11943,18 @@
     "\n",
     "    # Procesar video - puedes comentar output_path si no quieres guardar el video\n",
     "    process_video(video_path, output_path, show=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Controls\n",
+    "\n",
+    "'q': out\n",
+    "'+': more detection threshold\n",
+    "'-': less detection threshold\n",
+    "'d': 10 seconds ahead "
    ]
   }
  ],
