finished radio transcription

--- a/scripts/NLP_radio_processing/N01_radio_transcription.ipynb
+++ b/scripts/NLP_radio_processing/N01_radio_transcription.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +56,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Selecting my Whisper model\n",
+    "\n",
+    "For selecting the Whisper model, I have to take into account the VRAM of my Graphic card. It has 8gb of VRAM, therefore, I´ll use the **Whisper Medium Model**. Below there is a table with all the models available for Whisper:\n",
+    "\n",
+    "| Model     | Size (GB) | Parameters | VRAM Required |\n",
+    "|----------|----------|------------|--------------|\n",
+    "| tiny     | ~0.07 GB | 39M        | ~1 GB       |\n",
+    "| base     | ~0.14 GB | 74M        | ~1.5 GB     |\n",
+    "| small    | ~0.46 GB | 244M       | ~2.5 GB     |\n",
+    "| medium   | ~1.5 GB  | 769M       | ~5 GB       |\n",
+    "| large-v1 | ~2.9 GB  | 1550M      | ~10 GB      |\n",
+    "| large-v2 | ~2.9 GB  | 1550M      | ~12 GB      |\n",
+    "\n",
+    "However, for not overloading the graphic card, I´ll use **float point 16 of torch** instead of fp32. It may have less performance, but it is still a good option and I can save resources with this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Loading audio files\n",
     "\n",
     "---"
@@ -63,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,95 +253,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Quick test with the tiny model to see everything is working fine\n"
+    "#### Quick test with the tiny model to see everything is working fine\n",
+    "\n",
+    "Now is commented because everything worked as expected. A radio_test csv was correctly made in week 4 folder with the full transcription of our radios."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create output directory if it doesn't exist\n",
+    "# os.makedirs(\"../../outputs/week4\", exist_ok=True)\n",
+    "\n",
+    "# # Test with just a few files first to ensure everything works\n",
+    "# if audio_files:\n",
+    "#     test_files = audio_files[:2]  # Just take the first 2 files for a quick test\n",
+    "#     print(f\"Testing transcription with {len(test_files)} files...\")\n",
+    "#     test_df = transcribe_audio_files(\n",
+    "#         test_files, \n",
+    "#         model_name=\"tiny\",  # Use the tiny model for quick testing\n",
+    "#         output_csv=\"../../outputs/week4/radios_test.csv\"\n",
+    "#     )\n",
+    "    \n",
+    "#     # Show the results\n",
+    "#     print(\"\\nTranscription test results:\")\n",
+    "#     print(test_df.head())\n",
+    "# else:\n",
+    "#     print(\"No audio files available for transcription\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transcribing all the audios\n",
+    "\n",
+    "Now I will tarnscribe all the audios using the Whisper model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing transcription with 2 files...\n",
-      "Loading Whisper tiny model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\victo\\miniconda3\\envs\\f1_strat_manager\\lib\\site-packages\\whisper\\__init__.py:150: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  checkpoint = torch.load(fp, map_location=device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transcribing 2 audio files...\n",
-      "Processing file 1/2: driver_(1,)_belgium_radio_39.mp3\n",
-      "Full transcription: So don't forget about Sisihe please. Are we both doing a lot? You just follow my instruction. Cute. Don't want to know what's going on to it. Max, please follow my instruction and trust it. Thank you.\n",
-      "Processing file 2/2: driver_(1,)_belgium_radio_40.mp3\n",
-      "Full transcription: Okay, back to our 20th grade, about 9 or 10 minutes. What do you thought? Can you get there or should we box? We need to box this last. To cover the land. I can't see the weather, we don't.\n",
-      "Saved 2 transcriptions to ../../outputs/week4/radios_test.csv\n",
-      "\n",
-      "Transcription test results:\n",
-      "  driver                          filename  \\\n",
-      "0      1  driver_(1,)_belgium_radio_39.mp3   \n",
-      "1      1  driver_(1,)_belgium_radio_40.mp3   \n",
-      "\n",
-      "                                           file_path  \\\n",
-      "0  ..\\..\\f1-strategy\\data\\audio\\driver_(1,)\\drive...   \n",
-      "1  ..\\..\\f1-strategy\\data\\audio\\driver_(1,)\\drive...   \n",
-      "\n",
-      "                                                text  duration  \n",
-      "0  So don't forget about Sisihe please. Are we bo...    15.168  \n",
-      "1  Okay, back to our 20th grade, about 9 or 10 mi...    15.576  \n"
+      "Checking GPU availability...\n",
+      "✅ GPU available: NVIDIA GeForce RTX 4060 Laptop GPU\n",
+      "CUDA version: 12.4\n"
      ]
     }
    ],
    "source": [
-    "# Create output directory if it doesn't exist\n",
-    "os.makedirs(\"../../outputs/week4\", exist_ok=True)\n",
+    "# Check again if the GPU is being used. It can take a long time,\n",
+    "#  so I need to be sure that the gpu is being used,\n",
     "\n",
-    "# Test with just a few files first to ensure everything works\n",
-    "if audio_files:\n",
-    "    test_files = audio_files[:2]  # Just take the first 2 files for a quick test\n",
-    "    print(f\"Testing transcription with {len(test_files)} files...\")\n",
-    "    test_df = transcribe_audio_files(\n",
-    "        test_files, \n",
-    "        model_name=\"tiny\",  # Use the tiny model for quick testing\n",
-    "        output_csv=\"../../outputs/week4/radios_test.csv\"\n",
-    "    )\n",
-    "    \n",
-    "    # Show the results\n",
-    "    print(\"\\nTranscription test results:\")\n",
-    "    print(test_df.head())\n",
+    "# It should be detected with one of the first cells of the code, but debugging does not harm\n",
+    "print(\"Checking GPU availability...\")\n",
+    "if torch.cuda.is_available():\n",
+    "    gpu_name = torch.cuda.get_device_name(0)\n",
+    "    print(f\"✅ GPU available: {gpu_name}\")\n",
+    "    print(f\"CUDA version: {torch.version.cuda}\")\n",
+    "    use_gpu = True\n",
     "else:\n",
-    "    print(\"No audio files available for transcription\")"
+    "    print(\"❌ No GPU detected. Using CPU (will be much slower)\")\n",
+    "    use_gpu = False\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transcribing all audio files with medium model...\n",
+      "Loading Whisper medium model...\n"
+     ]
+    }
+   ],
    "source": [
-    "# Only run this once you've verified the test works correctly\n",
+    "# Only run this cell when knowing everythig is fine\n",
+    "print(\"Transcribing all audio files with medium model...\")\n",
+    "full_df = transcribe_audio_files(\n",
+    "    audio_files,\n",
+    "    model_name=\"medium\",  # Using medium model for better quality\n",
+    "    output_csv=\"../../outputs/week4/radios_raw.csv\"\n",
+    ")\n",
     "\n",
-    "# Uncomment the following lines to process all files\n",
-    "# print(\"Transcribing all audio files with medium model...\")\n",
-    "# full_df = transcribe_audio_files(\n",
-    "#     audio_files,\n",
-    "#     model_name=\"medium\",  # Using medium model for better quality\n",
-    "#     output_csv=\"../outputs/week4/radios_raw.csv\"\n",
-    "# )\n",
-    "# \n",
-    "# print(\"\\nFull transcription complete!\")\n",
-    "# print(f\"Total segments: {len(full_df)}\")"
+    "print(\"\\nFull transcription complete!\")\n",
+    "print(f\"Total segments: {len(full_df)}\")"
    ]
   }
  ],
