--- a/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
@@ -14,18 +14,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "import nltk\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "# Set styling for visualizations\n",
+    "plt.style.use('ggplot')\n",
+    "sns.set(style=\"whitegrid\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "f1_strat_manager",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
