added function to get vader sentimet scores

--- a/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
@@ -282,6 +282,33 @@
     "\n",
     "radio_data.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "### Initializing Vader sentiment analyzer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initializing the sentiment analyzer\n",
+    "sid = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "# Get the sentiment scores\n",
+    "def get_sentiment_scores(text):\n",
+    "    # I add an exception for if the radio message is empty\n",
+    "    if pd.isna(text) or text ==\"\":\n",
+    "        return {\"neg\": 0 , \"neu\": 0, \"pos\": 0, \"compound\": 0}\n",
+    "    \n",
+    "    return sid.polarity_scores(text)"
+   ]
   }
  ],
  "metadata": {
